修改一些示例及注释